--- a/index.html
+++ b/index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Something</title>
-    <link href="index.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <div class="js-clock">
-      <h1>00:00</h1>
-    </div>
-    <form class="js-form form">
-      <input type="text" placeholder="What is your name?"/>
-    </form>
-    <h4 class="js-greetings greetings"></h4>
-    <form class="js-toDoForm">
-      <input type="text" placeholder="Write a to do" />
-    </form>
-    <ul class="js-toDoList">
-    </ul>
-    <span class="js-weather"></span>
-    <script src="clock.js"></script>
-    <script src="greeting.js"></script>
-    <script src="todo.js"></script>
-    <script src="background.js"></script>
-    <script src="weather.js"></script>
-  </body>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="css/style.css" rel="stylesheet" type="text/css" />
+		<title>Wallpaper</title>
+	</head>
+	<body>
+		<form id="login-form" class="hidden">
+			<input
+				required
+				maxlength="15"
+				type="text"
+				placeholder="What is your name?"
+			/>
+			<input type="submit" value="Log In" />
+		</form>
+		<h2 id="clock">00:00</h2>
+		<h1 id="greeting" class="hidden"></h1>
+		<form id="todo-form">
+			<input type="text" placeholder="Write your ToDo list!" required />
+		</form>
+		<ul id="todo-list"></ul>
+		<div id="footnote">
+			<span></span>
+			<span></span>
+		</div>
+	</body>
+	<div id="weather">
+		<span></span>
+		<span></span>
+	</div>
+	<script src="js/greetings.js"></script>
+	<script src="js/clock.js"></script>
+	<script src="js/quotes.js"></script>
+	<script src="js/background.js"></script>
+	<script src="js/todo.js"></script>
+	<script src="js/weather.js"></script>
 </html>
